correction titre banner version mobile

--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -12,13 +12,41 @@ body {
     margin-bottom: 43px;
     position: relative;
     color: white;
+    @media screen and (max-width: 840px) {
+      height: 111px;
+    }
+    &__title {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      display: flex;
+      @media screen and (max-width: 500px) {
+        flex-wrap: wrap;
+        left: 10%;
+        transform: translate(0%, -50%);
+      }
+
+      p {
+        width: max-content;
+        text-align: center;
+        margin: 0;
+        font-size: 48px;
+        @media screen and (max-width: 840px) {
+          font-size: 24px;
+          width: max-content;
+          text-align: left;
+        }
+      }
+    }
 
     .bannerImg__container {
       width: 100%;
       height: 100%;
       img {
-        width: 100%;
+        width: 150%;
         min-height: 100%;
+        object-fit: cover;
       }
       &::after {
         content: '';
@@ -29,22 +57,6 @@ body {
         position: absolute;
         left: 0;
         top: 0;
-      }
-    }
-    p {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: max-content;
-      text-align: center;
-      margin: 0;
-      font-size: 48px;
-      @media screen and (max-width: 840px) {
-        font-size: 24px;
-        width: 100%;
-        margin-left: 16px;
-        text-align: left;
       }
     }
   }
